# famdo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yaml
.zed/: debug.json
connectors/: tiff_to_fam_v2_connector.json
crates/famh-model/: Cargo.toml  FAMH_MODEL_PLAYGROUND.md
crates/famh-model/examples/: famh.rs  modify_schema.rs
crates/famh-model/src/: lib.rs  v1.rs  v2.rs
crates/famh-model/src/v1/: customer_section.rs  data_evaluation.rs  general_section.rs  history_section.rs  method_specific.rs  tool_specific.rs  unit_types.rs
crates/famh-model/src/v2/: customer_section.rs  data_evaluation.rs  general_section.rs  history_section.rs  method_specific.rs  tool_specific.rs
src/: cli.rs  lib.rs  main.rs  schema.rs  utils.rs
src/commands/: delete.rs  edit.rs  extract.rs  map.rs  mod.rs  validate.rs
tests/fixtures/: complete_example_v2.json  sam301_#632_1,4mm_JSONcorrect.json
tests/fixtures/v1/: minimal_example_fib.json  minimal_example_optical.json  minimal_example_sem.json  rectangle_example_sem.json
tests/fixtures/v2/: complete_example_multiple_failures_v2.json  minimal_example_fib.json  minimal_example_optical.json  rectangle_example_sem.json
tests/integration/: extract.rs  mod.rs  validate_v1.rs  validate_v2.rs
