[package]
name = "famdo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
jsonschema = "0.33.0"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
serde_json_path = "0.7"
tiff = "0.10.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs"] }
